Fixes #19612. Adjusts the vertical spacing between the color circle rows in the placeholder screen.

--- a/packages/block-library/src/cover/style.scss
+++ b/packages/block-library/src/cover/style.scss
@@ -119,6 +119,13 @@
 	object-fit: cover;
 }
 
+// Adjusted the vertical spacing of color circle rows in the placeholder setup screen.
+.wp-block-cover__placeholder-background-options {
+	.components-circular-option-picker {
+		margin-top: 0;
+	}
+}
+
 // Styles bellow only exist to support older versions of the block.
 // Versions that not had inner blocks and used an h2 heading had a section (and not a div) with a class wp-block-cover-image (and not a wp-block-cover).
 // We are using the previous referred differences to target old versions.
